# osquery

.github/workflows/: hosted_runners.yml
cmake/: install_directives.cmake  utilities.cmake
osquery/: CMakeLists.txt
osquery/core/: query.h
osquery/core/windows/: global_users_groups_cache.h
osquery/database/: database.cpp  database.h
osquery/libosquery/: CMakeLists.txt  osquery.cpp  osquery.h
